syntax = "proto3";
package tm;

option go_package = "github.com/tendermint/tendermint2/pkgs/sdk/pb";

// imports
import "github.com/tendermint/tendermint2/pkgs/bft/abci/types/abci.proto";
import "github.com/tendermint/tendermint2/pkgs/crypto/merkle/merkle.proto";

// messages
message Result {
	abci.ResponseBase ResponseBase = 1;
	sint64 GasWanted = 2;
	sint64 GasUsed = 3;
}